feat(develop): Configure dagger hilt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'kotlin-parcelize'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'kotlin-parcelize'
 
 android {
     def globalConfig = rootProject.extensions.getByName("ext")
@@ -33,7 +32,7 @@ android {
 
         }
         release{
-            
+
         }
     }
     compileOptions {
