--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@
 apply from: 'dependencies.gradle'
 buildscript {
     ext.kotlin_version = "1.4.31"
+    ext.kotlin_version = '1.4.21'
+    ext.hilt_version = '2.28-alpha'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath 'com.google.gms:google-services:4.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
