--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 apply from: 'dependencies.gradle'
 buildscript {
     ext.kotlin_version = "1.4.31"
-    ext.kotlin_version = '1.4.21'
     ext.hilt_version = '2.28-alpha'
     repositories {
         google()
@@ -23,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
