--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'*/
 
+    implementation project(':domain')
+    implementation project(':data')
+
     def appDependencies = rootProject.ext.presentationDependencies
     def appTestDependencies = rootProject.ext.presentationTestDependencies
     def dataDependencies = rootProject.ext.dataDependencies
