feature(CleanCodeArchi/spaceX_api_connect): Add network module basic configuration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,17 +22,17 @@ android {
 
     buildTypes {
         debug{
-
+            buildConfigField("String", "BASE_URL", '"https://api.spacexdata.com/"')
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         staging{
-
+            buildConfigField("String", "BASE_URL", '"https://api.spacexdata.com/"')
         }
         release{
-
+            buildConfigField("String", "BASE_URL", '"https://api.spacexdata.com/"')
         }
     }
     compileOptions {
