feature(CleanCodeArchi/spaceX_api_connect): Add layout xml file and init activity and fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.HomePageActivity"/>
+        <activity android:name=".ui.rocket_history.rocket_detail.RocketDetailActivity"/>
     </application>
 
 </manifest>
